炫彩编程助手/Data/DemoMgr/net/Lib/XCGUI.cs


		[DllImport("xcgui.dll", EntryPoint = "XAdListView_DeleteAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdListView_DeleteAll (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_DeleteAllGroup", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdListView_DeleteAllGroup (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_DeleteAllItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdListView_DeleteAllItem (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_DeleteColumnGroup", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdListView_DeleteColumnGroup (int hAdapter,int iColumn);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_DeleteColumnItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdListView_DeleteColumnItem (int hAdapter,int iColumn);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_GetTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdListView_Item_GetTextEx (int hAdapter,int iGroup,int iItem,string pName,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XAdListView_Item_GetImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdListView_Item_GetImageEx (int hAdapter,int iGroup,int iItem,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_Create ();

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_Sort", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdTable_Sort (int hAdapter,int iColumn,bool bAscending);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemDataType", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_GetItemDataType (int hAdapter,int iItem,int iColumn);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemDataTypeEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_GetItemDataTypeEx (int hAdapter,int iItem,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_AddColumn (int hAdapter,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_SetColumn (int hAdapter,string pColName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_AddItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_AddItemText (int hAdapter,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_AddItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_AddItemTextEx (int hAdapter,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_AddItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_AddItemImage (int hAdapter,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_AddItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_AddItemImageEx (int hAdapter,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_InsertItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_InsertItemText (int hAdapter,int iItem,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_InsertItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_InsertItemTextEx (int hAdapter,int iItem,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_InsertItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_InsertItemImage (int hAdapter,int iItem,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_InsertItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_InsertItemImageEx (int hAdapter,int iItem,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemText (int hAdapter,int iItem,int iColumn,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemTextEx (int hAdapter,int iItem,string pName,string pValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemInt", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemInt (int hAdapter,int iItem,int iColumn,int nValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemIntEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemIntEx (int hAdapter,int iItem,string pName,int nValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemFloat", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemFloat (int hAdapter,int iItem,int iColumn,float nValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemFloatEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemFloatEx (int hAdapter,int iItem,string pName,float nValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemImage (int hAdapter,int iItem,int iColumn,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_SetItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_SetItemImageEx (int hAdapter,int iItem,string pName,int hImage);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_DeleteItem", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_DeleteItem (int hAdapter,int iItem);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_DeleteItemEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_DeleteItemEx (int hAdapter,int iItem,int nCount);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_DeleteItemAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdTable_DeleteItemAll (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_DeleteColumnAll", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern void XAdTable_DeleteColumnAll (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetCount", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_GetCount (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetCountColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_GetCountColumn (int hAdapter);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_GetItemText (int hAdapter,int iItem,int iColumn,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_GetItemTextEx (int hAdapter,int iItem,string pName,string pOut,int nOutLen);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_GetItemImage (int hAdapter,int iItem,int iColumn);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemImageEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTable_GetItemImageEx (int hAdapter,int iItem,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemInt", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_GetItemInt (int hAdapter,int iItem,int iColumn,int pOutValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemIntEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_GetItemIntEx (int hAdapter,int iItem,string pName,int pOutValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemFloat", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_GetItemFloat (int hAdapter,int iItem,int iColumn,float pOutValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTable_GetItemFloatEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern bool XAdTable_GetItemFloatEx (int hAdapter,int iItem,string pName,float pOutValue);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_Create", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_Create ();

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_AddColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_AddColumn (int hAdapter,string pName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_SetColumn", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_SetColumn (int hAdapter,string pColName);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_InsertItemText", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_InsertItemText (int hAdapter,string pValue,int nParentID,int insertID);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_InsertItemTextEx", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_InsertItemTextEx (int hAdapter,string pName,string pValue,int nParentID,int insertID);

		[DllImport("xcgui.dll", EntryPoint = "XAdTree_InsertItemImage", CharSet = CharSet.Unicode, CallingConvention = CallingConvention.StdCall)]
		unsafe public static extern int XAdTree_InsertItemImage (int hAdapter,int hImage,int nParentID,int insertID);
